# MathX

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DEV_NOTES.md  README.md  get_fonts.ps1
.github/workflows/: linux-build.yml
resources/: resources.qrc
resources/settings/: bg-display.pngs
resources/shaders/: blur.frag  composite.frag  fullscreen.vert  glass.frag  glass.vert  prefilter.frag
src/: CMakeSettings.template.json  main.cpp
src/cli/: BatchCli.cpp  BatchCli.h
src/constants/: ConvCategories.h  Duration.h  ResultTypes.h  RunSource.h  StateUtils.cpp  StateUtils.h  Theme.cpp  Theme.h
src/input/: Completer.h  HistoryNavigator.h  InputAction.h  InputHandler.cpp  InputHandler.h  InputRouter.h  PromptController.cpp  PromptController.h  ShapePrompt.h
src/math/: Algebra.cpp  Algebra.h  BigNum.cpp  BigNum.h  Expr.cpp  Expr.h  ExprTree.cpp  ExprTree.h  FactorialWorker.cpp  FactorialWorker.h  MathEngine.cpp  MathEngine.h  NaturalLanguage.cpp  NaturalLanguage.h  PolyEngine.cpp  PolyEngine.h  Polynomial.cpp  Polynomial.h  Simplifier.cpp  Simplifier.h  Solver.cpp  Solver.h  TreeParser.cpp  TreeParser.h  TreePoly.cpp  TreePoly.h  TreeSolver.cpp  TreeSolver.h  WordProblem.cpp  WordProblem.h  tryConversion.cpp
src/render/: MathText.cpp  MathText.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderWidget.cpp  RenderWidget.h  Renderer.h  VulkanRenderer.h
src/render/shaders/: glass.frag  glass.vert
src/settings/: RegistryWatcher.cpp  RegistryWatcher.h  Settings.cpp  Settings.h  SettingsDef.cpp  SettingsDef.h
src/shapes/: GeoCard.cpp  GeoCard.h  MeshShape.cpp  MeshShape.h  RenderMode.h  RenderShape.h  ResultRow.h  ShapeDef.h  ShapeDefs.h  ShapeInfo.h  ShapeRegistry.cpp  ShapeRegistry.h  Shapes2D.cpp  Shapes2D.h  Shapes3D.cpp  Shapes3D.h  SliderRow.h
src/shapes/circle/: circle.cpp  circle.h
src/shapes/cube/: cube.cpp  cube.h
src/shapes/cuboid/: cuboid.cpp  cuboid.h
src/shapes/cylinder/: cylinder.cpp  cylinder.h
src/shapes/sphere/: sphere.cpp  sphere.h
src/subSystems/: WidgetRegistry.cpp  WidgetRegistry.h
src/theme/: Theme.h
src/thread/: GenericWorker.cpp  GenericWorker.h  PersistentWorker.cpp  PersistentWorker.h
src/ui/: Animations.cpp  Animations.h  ApproxCard.cpp  ApproxCard.h  BatchPanel.cpp  BatchPanel.h  BatchRunner.cpp  BatchRunner.h  CRTLogoWidget.h  CRTTextLabel.cpp  CRTTextLabel.h  ClickableLabel.h  ConversionLabel.h  CopyableLabel.cpp  CopyableLabel.h  DemoTyper.h  DraggableExpressionEdit.cpp  DraggableExpressionEdit.h  DraggableResultLabel.cpp  DraggableResultLabel.h  ExprTokens.cpp  ExprTokens.h  FeatureViewerPage.cpp  FeatureViewerPage.h  FocusAnchor.h  FocusGlow.cpp  FocusGlow.h  GeoModeWidget.cpp  GeoModeWidget.h  GhostLineEdit.h  HistoryDock.cpp  HistoryDock.h  MainWindow.cpp  MainWindow.h  MasterLabel.h  MemoryUsage.cpp  MemoryUsage.h  ModdedBtn.cpp  ModdedBtn.h  NumberFormat.cpp  (+18 more)
src/ui/settings/: SettingsPage.cpp  SettingsPage.h
